--- a/package.json
+++ b/package.json
@@ -76,7 +76,9 @@
     "he": "^1.2.0",
     "lodash.template": "^4.5.0",
     "object-assign": "^4.1.1",
-    "serialize-javascript": "^2.1.0"
+    "resolve": "^1.12.0",
+    "serialize-javascript": "^2.1.0",
+    "source-map": "^0.7.3"
   },
   "lint-staged": {
     "*.{tsx,js,jsx,ts}": [
